# clipr

./: Cargo.toml  README.md  xclip
Users/elias/Documents/Coding/clipr/Formula/: clipr.rb
src/: clipboard.rs  main.rs
