[package]
name = "clipr"
version = "0.1.1"
edition = "2021"
description = "A simple clipboard utility for command line"
authors = ["Elias Nau <contact@eliasnau.dev>"]
license = "MIT"
repository = "https://github.com/eliasnau/clipr"

[profile.release]
opt-level = 3
strip = true  # Strips symbols from binary
lto = true    # Enable link-time optimization
codegen-units = 1  # Optimize for size
panic = "abort"    # Remove panic unwinding to reduce binary size

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
arboard = "3.3"
atty = "0.2"
colored = "2.1.0"

